k8s/dept.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dept-go
  namespace: ns-go
spec:
  selector:
    matchLabels:
      app: dept-go
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: dept-go
    spec:
      containers:
      - name: dept-go
        image: 887870046594.dkr.ecr.us-east-2.amazonaws.com/go:number
        ports:
        - containerPort: 80
